RESOLVED FIXED217987
REGRESSION (r268483): Map jumps around while zooming on windy.com, strava.com
https://bugs.webkit.org/show_bug.cgi?id=217987
Summary REGRESSION (r268483): Map jumps around while zooming on windy.com, strava.com
Antoine Quint
Reported 2020-10-20 14:11:20 PDT
Load windy.com, and zoom the map in and out with up/down scroll gestures on the trackpad. The map jumps around, seemingly using the wrong zoom origin.
Attachments
Test (388 bytes, text/html)
2020-10-20 14:13 PDT, Antoine Quint
no flags
Patch (9.22 KB, patch)
2020-10-20 14:38 PDT, Antoine Quint
simon.fraser: review+
ews-feeder: commit-queue-
Antoine Quint
Comment 1 2020-10-20 14:11:42 PDT
Antoine Quint
Comment 2 2020-10-20 14:13:17 PDT
Created attachment 411914 [details] Test The issue is that when several animations for the same property targeting the same layer are added at the same time, we used to always override the previous animations and now, for transform animations, we actually use additivity over the previous animations.
Antoine Quint
Comment 3 2020-10-20 14:38:47 PDT
Simon Fraser (smfr)
Comment 4 2020-10-20 14:41:21 PDT
Comment on attachment 411917 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=411917&action=review > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:2960 > + // animations created for a single KeyframeEffect, one for each trasnform component. In that trasnform
Antoine Quint
Comment 5 2020-10-20 15:58:56 PDT
Note You need to log in before you can comment on or make changes to this bug.